--- a/vrm-next-app/package.json
+++ b/vrm-next-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@pixiv/three-vrm": "^2.1.3",
+    "framer-motion": "^12.23.25",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
